# kiwiTorch

./: .gitignore  .justfile  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
include/: operators.hpp
scripts/: this.py
src/: main.cpp  operators.cpp
src/kiwitorch/: pyproject.toml
src/kiwitorch/src/kiwitorch/: __init__.py  cli.py  module.py  operators.py  testing.py
src/kiwitorch/src/kiwitorch/nn/: module.py
src/kiwitorch/src/kiwitorch/scalar/: scalar.py
src/kiwitorch/src/kiwitorch/tensor/: tensor.py
tests/src/kiwitorch/: strategies.py  test_module.py  test_operators.py  test_return_two.py
tests/src/kiwitorch_test/: test_module.py  test_operators.py
