[project]
name = "kiwitorch"
version = "0.0.0"
description = "A pytorch implementation written in Python."
authors = [
    { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.12.5",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
