[project]
name = "kiwitorch"
version = "0.0.0"
description = "A pytorch implementation written in Python."
authors = [
    { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.12.5",
    "numpy>=1.24.0",
    "networkx>=3.4.2",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
